Rather than processes and IPC, let's just use FFM